Bug 200138 Delete Mail Marked as Junk changes/forces selection. p=Kent James <kent@caspia.com>,r/sr=Neil